--- a/Flashlight/app/src/main/AndroidManifest.xml
+++ b/Flashlight/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/torch_app_widget_info" />
         </receiver>
+
+        <service
+            android:name=".TorchService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
