--- a/MyWebBrowser/app/build.gradle
+++ b/MyWebBrowser/app/build.gradle
@@ -23,6 +23,8 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.anko:anko:$anko_version"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
